# bron

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
darwin/: .env  .env.example  __init__.py  constants.py  constants.py.prepatch  darwin_preflight.py  package-lock.json  requirements.txt  verify_darwin.sh
darwin/agent/: CONTRACT.md  __init__.py  client.py  fixtures.py  outputs.py  parsing.py  registry.py  registry.py.prepatch  spec.py  telemetry.py  worker.py
darwin/architect/: CONTRACT.md  __init__.py  architect.py  assembly.py  fixtures.py  prompts.py  schemas.py
darwin/escalation/: CONTRACT.md  __init__.py  conductor.py  corpus.py  diagnosis.py  embedding.py  escalator.py  fixtures.py  schemas.py
darwin/observability/: CONTRACT.md  __init__.py  bus.py  emitter.py  events.py  fixtures.py  frontend_bridge.py  replay.py  self_improving_scorer.py  serve_frontend.py  store.py  websocket_server.py
darwin/problem/: CONTRACT.md  __init__.py  demo_instances.py  f1_calendar.py  f1_codec.py  f1_problem.py  f1_scorer.py  f1_scorer.py.f1c  f1_scorer.py.precal  f1_team.py  fixtures.py  flow.py  generator.py  loader.py  oracle.py  resilience.py  schemas.py  schemas.py.f1c  scorer.py
darwin/rearrange/: CONTRACT.md  __init__.py  fixtures.py  generator.py  loop.py  operators.py  reorganizer.py
darwin/routing/: CONTRACT.md  __init__.py  efficiency.py  fleet.py  fleet.py.prepatch  gene.py  gene.py.prepatch  observability.py  observability.py.prepatch  policy.py
darwin/team/: CONTRACT.md  __init__.py  (+8 more)
frontend/: .env.example  package-lock.json
(+95 files in other folders)
