[project]
name = "darwin"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pymongo",
    "motor",
    "google-genai>=2",
    "openai>=1",
    "voyageai",
    "ortools",
    "python-dotenv",
    "hypothesis",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["darwin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["darwin"]
